fix sidepanel overlap hide it below desktop

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: center; }
-  @media screen and (max-width: 576px) {
+  @media screen and (max-width: 1300px) {
     .sidepanel {
       display: none; } }
   .sidepanel__text {
